# doc.bzl

./: .bazelrc  .envrc  .gitignore  BUILD  MODULE.bazel  README.md  _config.yml  broken_libs.txt  index.html  index.tmpl.html  nav.tmpl.html  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rules.bzl  rules.json  rules.schema.json
.github/workflows/: ci.yml  gh-pages.yml  rules_db.yml
_layouts/: default.html
docs/: index.md
docs/aspect_bazel_lib/lib/: bats.md
docs/aspect_rules_jasmine/jasmine/: defs.md
docs/aspect_rules_js/js/: defs.md
docs/aspect_rules_js/npm/: defs.md
docs/aspect_rules_lint/lint/: ruff.md
docs/aspect_rules_swc/swc/: defs.md
docs/aspect_rules_ts/ts/: defs.md
docs/rules_oci/oci/: defs.md
docs/tar.bzl/tar/: mtree.md  tar.md
patches/: aspect_rules_esbuild.patch  aspect_rules_js.patch  aspect_rules_lint.patch  bazel-lib.patch  bazel_skylib.patch  rules_multitool.patch  rules_oci.patch
tools/: BUILD  list_bzl_libraries.sh  tools.lock.json
tools/render/: BUILD  defs.bzl  handlebars.mts  index.mts  package.json  tsconfig.json
tools/render/templates/: BUILD.bazel  module.md
