bazel_dep(name = "bazel_skylib", version = "0.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.16.0")
bazel_dep(name = "aspect_rules_esbuild", version = "0.22.1")
bazel_dep(name = "aspect_rules_lint", version = "1.4.2")
bazel_dep(name = "aspect_rules_jasmine", version = "2.0.0")
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "aspect_rules_ts", version = "3.6.0")
bazel_dep(name = "aspect_rules_swc", version = "2.4.2")
bazel_dep(name = "bazel_env.bzl", version = "0.3.1")
bazel_dep(name = "jq.bzl", version = "0.1.0")
bazel_dep(name = "rules_apko", version = "1.4.2")
bazel_dep(name = "rules_distroless", version = "0.5.1")
bazel_dep(name = "rules_go", version = "0.54.1")
bazel_dep(name = "rules_nodejs", version = "6.4.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_rust", version = "0.61.0")
bazel_dep(name = "rules_shell", version = "0.4.1")
bazel_dep(name = "tar.bzl", version = "0.3.0")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

single_version_override(
    module_name = "bazel_skylib",
    patches = [
        # We need https://github.com/bazelbuild/bazel-skylib/pull/571
        "//:patches/bazel_skylib.patch",
    ],
    version = "1.7.1",
)

# TEMP: pick up stardoc fixes
git_override(
    module_name = "aspect_rules_swc",
    commit = "ec7b6c3d988669543b89733d9666e8305fdd7c4d",
    remote = "https://github.com/aspect-build/rules_swc.git",
)

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to run the same pnpm version that Bazel manages
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")
